--- a/style.css
+++ b/style.css
@@ -42,6 +42,18 @@ header .herramientas nav li{
     display: inline-block;
 }
 
+. territoriafectado {
+    grid-column: 2 / 4;
+    grid-row: 2;
+    margin-right: 1em;
+}
+
+.territoriafectado>img {
+    width: 130%;
+}
+
+
+
 footer {
     text-align: center;
     background-color: #323E7E;
@@ -60,4 +72,7 @@ margin-left: 20
   bottom:10px;
   right:10px;
   z-index:2;
+    
 }
+
+
