--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ body{
 
 .grid-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 0fr;
+  grid-template-rows: 1fr 0r;
   gap: 50px 50px;
   grid-template-areas: "foto" "intro" "fotovideo" ". .";
     margin: 35 auto ;
@@ -27,10 +27,23 @@ body{
     
 }
 
+.videotutorial{
+    width: auto
+    grid-row: 7/8;
+    grid-column: 2/4;
+    height: 35em;
+    margin-top: 5%;
+    
+}
+
+
+
 header{
     background-color: #151633
     grid-column: span 7;
 }
+
+
 
 header .herramientas {
       width: 7040px
