--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@ body{
 }
 
 .videotutorial{
-    width: 400px;
-    grid-row: 7/8;
-    grid-column: 2/4;
+    width: 500px;
+    grid-row: 2;
+    grid-column: 2/5;
     height: 50em;
     margin-top: 5%;
     
